--- a/scss/dependencies/_reviews.scss
+++ b/scss/dependencies/_reviews.scss
@@ -58,7 +58,8 @@
       line-height:40px;
     }
     .col-1, .col-2 {
-      padding:0;
+      padding-left:15px;
+      padding-right:15px;
     }
     iframe {
       max-height:500px !important;
